# blockchain

./: README.md
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  railway.json
backend/src/: api.rs  errors.rs  main.rs
backend/src/blockchain/: block.rs  chain.rs  mod.rs  proof_of_work.rs  transaction.rs
backend/src/handlers/: block.rs  mod.rs  node.rs  transaction.rs
backend/src/storage/: file_store.rs
frontend/: README.md  index.html
frontend/src/: App.css  App.tsx
